# serializer version: 1
# name: test_describe[table-example]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_describe[warehouse-xsmall]
  '''
  SELECT A MOCK QUERY
  +-----------------------------+
  | name | type        | kind   |
  |------+-------------+--------|
  | ID   | NUMBER(38,0 | COLUMN |
  | NAME | VARCHAR(100 | COLUMN |
  +-----------------------------+
  
  '''
# ---
# name: test_drop[database-important_prod_db]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | i      |
  +--------+
  
  '''
# ---
# name: test_drop[table-example]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | e      |
  +--------+
  
  '''
# ---
# name: test_drop[warehouse-xsmall]
  '''
  SELECT A MOCK QUERY
  +--------+
  | status |
  |--------|
  | x      |
  +--------+
  
  '''
# ---
